// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Anchor States renders active styling if provided 1`] = `
<WithTheme(Anchor)
  active={true}
>
  <Anchor
    active={true}
    theme={
      Object {
        "document": undefined,
        "rtl": undefined,
        "styles": Object {},
      }
    }
  >
    <KeyboardFocusContainer>
      <Anchor__StyledAnchor
        active={true}
        focused={false}
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        tabIndex={0}
      >
        <a
          className="c-btn c-btn--anchor is-active "
          data-garden-id="buttons.anchor"
          data-garden-version="version"
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
          tabIndex={0}
        />
      </Anchor__StyledAnchor>
    </KeyboardFocusContainer>
  </Anchor>
</WithTheme(Anchor)>
`;

exports[`Anchor States renders disabled styling if provided 1`] = `
<WithTheme(Anchor)
  disabled={true}
>
  <Anchor
    disabled={true}
    theme={
      Object {
        "document": undefined,
        "rtl": undefined,
        "styles": Object {},
      }
    }
  >
    <KeyboardFocusContainer>
      <Anchor__StyledAnchor
        disabled={true}
        focused={false}
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        tabIndex={0}
      >
        <a
          className="c-btn c-btn--anchor is-disabled "
          data-garden-id="buttons.anchor"
          data-garden-version="version"
          disabled={true}
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
          tabIndex={0}
        />
      </Anchor__StyledAnchor>
    </KeyboardFocusContainer>
  </Anchor>
</WithTheme(Anchor)>
`;

exports[`Anchor States renders focused styling if provided 1`] = `
<WithTheme(Anchor)
  focused={true}
>
  <Anchor
    focused={true}
    theme={
      Object {
        "document": undefined,
        "rtl": undefined,
        "styles": Object {},
      }
    }
  >
    <KeyboardFocusContainer>
      <Anchor__StyledAnchor
        focused={true}
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        tabIndex={0}
      >
        <a
          className="c-btn c-btn--anchor is-focused "
          data-garden-id="buttons.anchor"
          data-garden-version="version"
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
          tabIndex={0}
        />
      </Anchor__StyledAnchor>
    </KeyboardFocusContainer>
  </Anchor>
</WithTheme(Anchor)>
`;

exports[`Anchor States renders hovered styling if provided 1`] = `
<WithTheme(Anchor)
  hovered={true}
>
  <Anchor
    hovered={true}
    theme={
      Object {
        "document": undefined,
        "rtl": undefined,
        "styles": Object {},
      }
    }
  >
    <KeyboardFocusContainer>
      <Anchor__StyledAnchor
        focused={false}
        hovered={true}
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        tabIndex={0}
      >
        <a
          className="c-btn c-btn--anchor is-hovered "
          data-garden-id="buttons.anchor"
          data-garden-version="version"
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
          tabIndex={0}
        />
      </Anchor__StyledAnchor>
    </KeyboardFocusContainer>
  </Anchor>
</WithTheme(Anchor)>
`;

exports[`Anchor renders danger styling if provided 1`] = `
<WithTheme(Anchor)
  danger={true}
>
  <Anchor
    danger={true}
    theme={
      Object {
        "document": undefined,
        "rtl": undefined,
        "styles": Object {},
      }
    }
  >
    <KeyboardFocusContainer>
      <Anchor__StyledAnchor
        danger={true}
        focused={false}
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        tabIndex={0}
      >
        <a
          className="c-btn c-btn--anchor c-btn--danger "
          data-garden-id="buttons.anchor"
          data-garden-version="version"
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
          tabIndex={0}
        />
      </Anchor__StyledAnchor>
    </KeyboardFocusContainer>
  </Anchor>
</WithTheme(Anchor)>
`;

exports[`Anchor renders external styling correctly if provided 1`] = `
.c0 {
  margin-bottom: -0.085em;
  padding-left: 0.25em;
  width: 0.85em;
  height: 0.85em;
  -webkit-transform: scaleX(-1);
  -ms-transform: scaleX(-1);
  transform: scaleX(-1);
}

<WithTheme(Anchor)
  external={true}
>
  <Anchor
    external={true}
    theme={
      Object {
        "document": undefined,
        "rtl": true,
        "styles": Object {},
      }
    }
  >
    <KeyboardFocusContainer>
      <Anchor__StyledAnchor
        focused={false}
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        tabIndex={0}
      >
        <a
          className="c-btn c-btn--anchor "
          data-garden-id="buttons.anchor"
          data-garden-version="version"
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
          tabIndex={0}
        >
          <Anchor__StyledNewWindowIcon>
            <MockSVG
              className="c0"
            >
              <span>
                SVG
              </span>
            </MockSVG>
          </Anchor__StyledNewWindowIcon>
        </a>
      </Anchor__StyledAnchor>
    </KeyboardFocusContainer>
  </Anchor>
</WithTheme(Anchor)>
`;

exports[`Anchor renders external styling correctly if provided in RTL mode 1`] = `
.c0 {
  margin-bottom: -0.085em;
  padding-left: 0.25em;
  width: 0.85em;
  height: 0.85em;
}

<WithTheme(Anchor)
  external={true}
>
  <Anchor
    external={true}
    theme={
      Object {
        "document": undefined,
        "rtl": undefined,
        "styles": Object {},
      }
    }
  >
    <KeyboardFocusContainer>
      <Anchor__StyledAnchor
        focused={false}
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        tabIndex={0}
      >
        <a
          className="c-btn c-btn--anchor "
          data-garden-id="buttons.anchor"
          data-garden-version="version"
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
          tabIndex={0}
        >
          <Anchor__StyledNewWindowIcon>
            <MockSVG
              className="c0"
            >
              <span>
                SVG
              </span>
            </MockSVG>
          </Anchor__StyledNewWindowIcon>
        </a>
      </Anchor__StyledAnchor>
    </KeyboardFocusContainer>
  </Anchor>
</WithTheme(Anchor)>
`;
